--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "react-icons-api3",
-    "version": "2.5.4",
+    "name": "react-icons",
+    "version": "0.0.0",
     "license": "MIT",
     "sideEffects": false,
     "scripts": {
