--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
         "optimize-chain-icons": "rimraf ./optimized/chains & svgo -q -p 8 -f ./raw/chains -o ./optimized/chains",
         "optimize-symbol-icons": "rimraf ./optimized/symbols & svgo -q -p 8 -f ./raw/symbols -o ./optimized/symbols",
         "build": "yarn optimize-chain-icons && yarn optimize-symbol-icons && node scripts/build.js",
+        "package": "yarn build && yarn pack --filename react-icons.tgz",
         "prettier": "prettier --write \"**/*.{js,jsx,json,md}\"",
         "release": "yarn changeset publish"
     },
     "peerDependencies": {
-        "react": "^16.13.1 || ^17.0.1",
-        "react-dom": "^16.13.1 || ^17.0.1"
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0"
     },
     "devDependencies": {
         "@babel/core": "^7.15.5",
