--- a/.github/workflows/deployfe.yml
+++ b/.github/workflows/deployfe.yml
@@ -40,7 +40,7 @@ jobs:
     - name: Install Packages
       run: npm install
     - name: Build Page
-      run: npm build
+      run: npm run build
     - name: Deploy to Github Pages
       uses: JamesIves/github-pages-deploy-action@v4
       with:
