--- a/viewer/package.json
+++ b/viewer/package.json
@@ -1,6 +1,7 @@
 {
   "name": "viewer",
   "version": "0.1.0",
+  "homepage": "https://api3dao.github.io/react-icons/",
   "private": true,
   "dependencies": {
     "@api3/chains": "^4.1.0",
