--- a/viewer/package.json
+++ b/viewer/package.json
@@ -1,49 +1,51 @@
 {
-    "name": "viewer",
-    "version": "0.1.0",
-    "homepage": "https://api3dao.github.io/react-icons/",
-    "private": true,
-    "dependencies": {
-        "@api3/chains": "^4.1.0",
-        "@chakra-ui/react": "^2.6.0",
-        "@emotion/react": "^11.11.1",
-        "@emotion/styled": "^11.11.0",
-        "@testing-library/jest-dom": "^5.17.0",
-        "@testing-library/react": "^13.4.0",
-        "@testing-library/user-event": "^13.5.0",
-        "framer-motion": "^10.16.4",
-        "gh-pages": "^6.0.0",
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0",
-        "react-icons": "file:../react-icons.tgz",
-        "react-scripts": "5.0.1",
-        "react-router-dom": "^6.15.0",
-        "web-vitals": "^2.1.4"
-    },
-    "scripts": {
-        "start": "react-scripts start",
-        "build": "react-scripts build",
-        "test": "react-scripts test",
-        "predeploy": "npm run build",
-        "deploy": "gh-pages -d build",
-        "eject": "react-scripts eject"
-    },
-    "eslintConfig": {
-        "extends": [
-            "react-app",
-            "react-app/jest"
-        ]
-    },
-    "browserslist": {
-        "production": [
-            ">0.2%",
-            "not dead",
-            "not op_mini all"
-        ],
-        "development": [
-            "last 1 chrome version",
-            "last 1 firefox version",
-            "last 1 safari version"
-        ]
-    }
+  "name": "viewer",
+  "version": "0.1.0",
+  "homepage": "https://api3dao.github.io/react-icons/",
+  "private": true,
+  "dependencies": {
+    "@api3/chains": "^4.1.0",
+    "@chakra-ui/react": "^2.6.0",
+    "@chakra-ui/icons": "^2.1.1",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "framer-motion": "^10.16.4",
+    "gh-pages": "^6.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-icons": "file:../react-icons.tgz",
+    "react-scripts": "5.0.1",
+    "react-router-dom": "^6.15.0",
+    "react-code-blocks": "^0.1.4",
+    "web-vitals": "^2.1.4"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
