Add paths for data, raw, and scripts directories in deployfe workflow

--- a/.github/workflows/deployfe.yml
+++ b/.github/workflows/deployfe.yml
@@ -6,6 +6,10 @@ name: Deploy to Github Pages
 on:
   push:
     branches: [ main ]
+    paths:
+      - 'data/**'
+      - 'raw/**'
+      - scripts/**
   pull_request:
     branches: [ main ]
 
