--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "react-icons",
+    "name": "@api3/logos",
     "version": "0.0.0",
     "license": "MIT",
     "sideEffects": false,
