Update package.json and index.html, and fix typo in Welcome.js

--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
     "license": "MIT",
     "sideEffects": false,
     "scripts": {
-        "optimize-chain-icons": "rimraf ./optimized/chains & svgo -q -p 8 -f ./raw/chains -o ./optimized/chains",
-        "optimize-symbol-icons": "rimraf ./optimized/symbols & svgo -q -p 8 -f ./raw/symbols -o ./optimized/symbols",
-        "build": "yarn optimize-chain-icons && yarn optimize-symbol-icons && node scripts/build.js",
+        "optimize-chain-logos": "rimraf ./optimized/chains & svgo -q -p 8 -f ./raw/chains -o ./optimized/chains",
+        "optimize-symbol-logos": "rimraf ./optimized/symbols & svgo -q -p 8 -f ./raw/symbols -o ./optimized/symbols",
+        "build": "yarn optimize-chain-logos && yarn optimize-symbol-logos && node scripts/build.js",
         "package": "yarn build && yarn pack --filename logos.tgz",
         "prettier": "prettier --write \"**/*.{js,jsx,json,md}\"",
         "release": "yarn changeset publish"
