--- a/package.json
+++ b/package.json
@@ -15,6 +15,14 @@
         "react": "^18.2.0",
         "react-dom": "^18.2.0"
     },
+    "exports": {
+        ".": {
+            "import": "./dist/esm/index.js",
+            "require": "./dist/cjs/index.js"
+        },
+        "./dist/svg/chains/*.svg": "./dist/svg/chains/*.svg",
+        "./dist/svg/symbols/*.svg": "./dist/svg/symbols/*.svg"
+    },
     "devDependencies": {
         "@babel/core": "^7.15.5",
         "@babel/preset-react": "^7.14.5",
@@ -23,10 +31,10 @@
         "@svgr/cli": "^5.5.0",
         "@svgr/core": "^5.5.0",
         "camelcase": "^6.2.0",
+        "prettier": "^3.1.0",
         "rimraf": "^3.0.2",
         "svgo": "^2.5.0",
-        "terser": "^5.7.2",
-        "prettier": "^3.1.0"
+        "terser": "^5.7.2"
     },
     "main": "./dist/cjs/index.js",
     "module": "./dist/esm/index.js",
