--- a/viewer/package.json
+++ b/viewer/package.json
@@ -18,6 +18,7 @@
         "react-code-blocks": "^0.1.4",
         "react-dom": "^18.2.0",
         "beta-logos": "file:./logos.tgz",
+        "react-markdown": "^9.0.1",
         "react-router-dom": "^6.15.0",
         "react-scripts": "5.0.1",
         "web-vitals": "^2.1.4"
