--- a/viewer/package.json
+++ b/viewer/package.json
@@ -12,15 +12,16 @@
         "@testing-library/jest-dom": "^5.17.0",
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
+        "beta-logos": "file:./logos.tgz",
         "framer-motion": "^10.16.4",
         "gh-pages": "^6.0.0",
         "react": "^18.2.0",
         "react-code-blocks": "^0.1.4",
         "react-dom": "^18.2.0",
-        "beta-logos": "file:./logos.tgz",
         "react-markdown": "^9.0.1",
         "react-router-dom": "^6.15.0",
         "react-scripts": "5.0.1",
+        "react-syntax-highlighter": "^15.5.0",
         "web-vitals": "^2.1.4"
     },
     "scripts": {
