--- a/viewer/package.json
+++ b/viewer/package.json
@@ -3,8 +3,7 @@
     "version": "0.1.0",
     "homepage": "https://api3dao.github.io/logos/",
     "private": true,
-    "dependencies": {
-        "@api3/api-integrations": "^0.0.1",
+    "devDependencies": {
         "@api3/chains": "^4.1.0",
         "@chakra-ui/icons": "^2.1.1",
         "@chakra-ui/react": "^2.6.0",
