--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     ],
     "dependencies": {
         "@api3/api-integrations": "^0.0.1",
-        "@api3/chains": "^4.1.0"
+        "@api3/chains": "^4.1.0",
+        "@nodary/utilities": "^0.11.0"
     }
 }
