--- a/viewer/package.json
+++ b/viewer/package.json
@@ -14,6 +14,7 @@
         "@testing-library/user-event": "^13.5.0",
         "beta-logos": "file:./logos.tgz",
         "framer-motion": "^10.16.4",
+        "@nodary/utilities": "^0.11.0",
         "gh-pages": "^6.0.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
@@ -24,7 +25,7 @@
         "web-vitals": "^2.1.4"
     },
     "scripts": {
-        "start": "react-scripts start",
+        "start": "GENERATE_SOURCEMAP=false react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
         "predeploy": "npm run build",
