--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -40,7 +40,7 @@ jobs:
         run: yarn --frozen-lockfile --network-timeout 300000
 
       - name: Build package
-        run: yarn build
+        run: yarn build-svg
 
       - name: Create Release Pull Request or Publish to npm
         uses: changesets/action@master
