--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,10 +4,17 @@ updates:
     directory: "/"
     schedule:
       interval: "daily"
-      time: "08:05"
+      time: "09:00"
     target-branch: "main"
+    allow:
+        dependency-name: "@api3/*"
+        dependency-name: "@nodary/*"
+    ignore:
+      - dependency-name: '*'
     groups:
       development-dependencies:
         patterns:
           - "@api3/*"
           - "@nodary/*"
+        exclude-patterns:
+          - "*"
