Update dependencies and ignore devDependencies in dependabot.yml

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,13 +4,14 @@ updates:
     directory: "/"
     schedule:
       interval: "daily"
-      time: "09:00"
+      time: "09:15"
     target-branch: "main"
     allow:
       - dependency-name: "@api3/*"
       - dependency-name: "@nodary/*"
     ignore:
       - dependency-name: "*"
+        dependency-type: "devDependencies"
     groups:
       development-dependencies:
         patterns:
