--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,16 +4,33 @@ updates:
     directory: "/"
     schedule:
       interval: "daily"
-      time: "09:20"
+      time: "12:30"
     target-branch: "main"
     allow:
       - dependency-name: "@api3/*"
       - dependency-name: "@nodary/*"
-      - dependency-type: "production"
     groups:
-      development-dependencies:
+      api3:
         patterns:
           - "@api3/*"
           - "@nodary/*"
-        exclude-patterns:
+      others:
+        patterns:
+          - "*"
+  - package-ecosystem: "npm"
+    directory: "/viewer"
+    schedule:
+      interval: "daily"
+      time: "12:30"
+    target-branch: "main"
+    allow:
+      - dependency-name: "@api3/*"
+      - dependency-name: "@nodary/*"
+    groups:
+      api3:
+        patterns:
+          - "@api3/*"
+          - "@nodary/*"
+      others:
+        patterns:
           - "*"
