--- a/package.json
+++ b/package.json
@@ -13,16 +13,14 @@
         "prettier": "prettier --write \"**/*.{js,jsx,json,md}\"",
         "release": "yarn changeset publish"
     },
-    "dependencies": {
+    "devDependencies": {
         "@api3/api-integrations": "^0.0.1",
         "@api3/chains": "^4.1.0",
-        "@nodary/utilities": "^0.11.0"
-    },
-    "devDependencies": {
         "@babel/core": "^7.15.5",
         "@babel/preset-react": "^7.14.5",
         "@changesets/changelog-github": "^0.4.8",
         "@changesets/cli": "^2.26.2",
+        "@nodary/utilities": "^0.11.0",
         "@svgr/cli": "^5.5.0",
         "@svgr/core": "^5.5.0",
         "@types/react": "^18.2.39",
