--- a/package.json
+++ b/package.json
@@ -14,23 +14,19 @@
         "release": "yarn changeset publish"
     },
     "dependencies": {
-        "camelcase": "^5.3.1"
+        "camelcase": "^6.3.0"
     },
     "devDependencies": {
         "@api3/api-integrations": "^0.0.1",
         "@api3/chains": "^4.1.0",
         "@babel/core": "^7.15.5",
         "@babel/preset-react": "^7.14.5",
-        "@changesets/changelog-github": "^0.4.8",
-        "@changesets/cli": "^2.26.2",
+        "@changesets/changelog-github": "^0.5.0",
+        "@changesets/cli": "^2.27.1",
         "@nodary/utilities": "^1.0.0",
-        "@svgr/cli": "^5.5.0",
-        "@svgr/core": "^5.5.0",
-        "@types/react": "^18.2.39",
-        "prettier": "^3.1.0",
-        "rimraf": "^3.0.2",
-        "svgo": "^2.5.0",
-        "terser": "^5.7.2"
+        "prettier": "^3.1.1",
+        "rimraf": "^5.0.5",
+        "svgo": "^2.5.0"
     },
     "main": "./dist/cjs/index.js",
     "module": "./dist/esm/index.js",
