Update schedule in renovate.json

--- a/renovate.json
+++ b/renovate.json
@@ -59,7 +59,7 @@
             ],
             "groupName": "other major updates",
             "schedule": [
-                "first day of the month at 7am"
+                "before 7am on the first day of the month"
             ]
         }
     ],
