--- a/renovate.json
+++ b/renovate.json
@@ -21,6 +21,9 @@
             "matchUpdateTypes": [
                 "major"
             ],
+            "schedule": [
+                "before 7am on the first day of the month"
+            ],
             "groupName": "api3 major updates"
         },
         {
@@ -34,6 +37,9 @@
             "matchUpdateTypes": [
                 "patch",
                 "minor"
+            ],
+            "schedule": [
+                "before 7am on the first day of the month"
             ],
             "groupName": "api3"
         },
