Add pull_request event to repository_dispatch workflow

--- a/.github/workflows/dispatch.yml
+++ b/.github/workflows/dispatch.yml
@@ -3,6 +3,8 @@ name: dispatch receiver
 on:
     repository_dispatch:
         types: [release]
+    pull_request:
+      
 jobs:
   build:
     name: Run renovate
