--- a/viewer/package.json
+++ b/viewer/package.json
@@ -23,7 +23,7 @@
         "react-scripts": "5.0.1",
         "react-syntax-highlighter": "^15.5.0",
         "web-vitals": "^3.5.1",
-        "@api3/api-integrations": "^0.0.1"
+        "api-integrations": "^0.1.0"
     },
     "scripts": {
         "start": "GENERATE_SOURCEMAP=false react-scripts start",
