--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@api3/logos",
+    "name": "api3-logos",
     "version": "0.0.18",
     "license": "MIT",
     "sideEffects": false,
