--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "@api3/logos",
-    "version": "1.0.0",
+    "name": "api3-logos",
+    "version": "0.0.18",
     "license": "MIT",
     "sideEffects": false,
     "scripts": {
