--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "beta-logos",
+    "name": "@phase21/logos",
     "version": "0.0.17",
     "license": "MIT",
     "sideEffects": false,
