--- a/viewer/package.json
+++ b/viewer/package.json
@@ -12,7 +12,7 @@
         "@testing-library/jest-dom": "^6.1.6",
         "@testing-library/react": "^14.1.2",
         "@testing-library/user-event": "^14.5.2",
-        "beta-logos": "file:./logos.tgz",
+        "@phase21/logos": "file:./logos.tgz",
         "framer-motion": "^10.16.16",
         "@nodary/utilities": "^1.1.0",
         "gh-pages": "^6.1.1",
