--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "api3-logos",
+    "name": "@phase21/logos",
     "version": "1.0.0",
     "license": "MIT",
     "sideEffects": false,
