--- a/viewer/package.json
+++ b/viewer/package.json
@@ -12,7 +12,7 @@
         "@testing-library/jest-dom": "^6.2.0",
         "@testing-library/react": "^14.1.2",
         "@testing-library/user-event": "^14.5.2",
-        "api3-logos": "file:./logos.tgz",
+        "@phase21/logos": "file:./logos.tgz",
         "framer-motion": "^10.17.9",
         "@nodary/utilities": "^1.2.0",
         "gh-pages": "^6.1.1",
