--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
         "camelcase": "^6.3.0"
     },
     "devDependencies": {
-        "api-integrations": "^0.1.0",
+        "@phase21/api-integrations": "^1.0.0",
         "@api3/chains": "^4.2.0",
         "@babel/core": "^7.23.7",
         "@babel/preset-react": "^7.23.3",
