Add @phase21 package pattern to renovate.json

--- a/renovate.json
+++ b/renovate.json
@@ -16,7 +16,8 @@
             ],
             "matchPackagePatterns": [
                 "@api3\/.*",
-                "@nodary\/.*"
+                "@nodary\/.*",
+                "@phase21\/.*"
             ],
             "matchUpdateTypes": [
                 "major"
@@ -29,7 +30,8 @@
             ],
             "matchPackagePatterns": [
                 "@api3\/.*",
-                "@nodary\/.*"
+                "@nodary\/.*",
+                "@phase21\/.*"
             ],
             "matchUpdateTypes": [
                 "patch",
