--- a/package.json
+++ b/package.json
@@ -17,13 +17,11 @@
         "camelcase": "^6.3.0"
     },
     "devDependencies": {
-        "@phase21/chains": "^0.1.1",
         "@babel/core": "^7.23.7",
         "@babel/preset-react": "^7.23.3",
         "@changesets/changelog-github": "^0.5.0",
         "@changesets/cli": "^2.27.1",
-        "@nodary/utilities": "^1.3.0",
-        "@phase21/api-integrations": "^1.0.0",
+        "@phase21/dapi-management": "^0.2.0",
         "prettier": "^3.1.1",
         "rimraf": "^5.0.5",
         "svgo": "^3.2.0"
