--- a/viewer/package.json
+++ b/viewer/package.json
@@ -4,7 +4,7 @@
     "homepage": "https://api3dao.github.io/logos/",
     "private": true,
     "devDependencies": {
-        "@phase21/dapi-management": "^0.2.0",
+        "@phase21/chains": "^0.1.1",
         "@chakra-ui/icons": "^2.1.1",
         "@chakra-ui/react": "^2.8.2",
         "@emotion/react": "^11.11.3",
@@ -21,7 +21,8 @@
         "react-router-dom": "^6.21.2",
         "react-scripts": "5.0.1",
         "react-syntax-highlighter": "^15.5.0",
-        "web-vitals": "^3.5.1"
+        "web-vitals": "^3.5.1",
+        "@phase21/api-integrations": "^1.0.0"
     },
     "scripts": {
         "start": "GENERATE_SOURCEMAP=false react-scripts start",
