--- a/.github/workflows/dispatch.yml
+++ b/.github/workflows/dispatch.yml
@@ -1,22 +1,18 @@
-name: dispatch receiver
+name: Trigger on release
 
 on:
-    repository_dispatch:
-        types: [release]    
+  release:
+    types: [published]
 jobs:
-  build:
-    name: Run renovate
+  Trigger:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4.1.1
-      - name: Self-hosted Renovate
-        uses: renovatebot/github-action@v39.2.4
-        env:
-          RENOVATE_REPOSITORIES: api3dao/logos
-          RENOVATE_ONBOARDING: "false"
-          RENOVATE_PLATFORM_COMMIT: "true"
-          RENOVATE_BASE_BRANCH: main
-        with:
-          configurationFile: renovate.json
-          token: ${{ secrets.GITHUB_TOKEN }}
+    - uses: actions/checkout@v4
+
+    - name: Repository Dispatch - Release logos
+      uses: peter-evans/repository-dispatch@v2
+      with:
+        token: ${{ secrets.PAT }}
+        repository: api3dao/update-sentry
+        event-type: release
+        client-payload: '{"repository": "logos"}'
