Update renovate.json to exclude @api3 packages from patch and minor updates

--- a/renovate.json
+++ b/renovate.json
@@ -13,7 +13,7 @@
             "groupName": "api3 major updates"
         },
         {
-            "matchPackagePatterns": ["@api3/.*", "@phase21/.*"],
+            "matchPackagePatterns": ["@phase21/.*"],
             "matchUpdateTypes": ["patch", "minor"],
             "schedule": ["before 3pm"],
             "groupName": "api3"
