--- a/renovate.json
+++ b/renovate.json
@@ -13,7 +13,7 @@
             "groupName": "api3 major updates"
         },
         {
-            "matchPackagePatterns": ["@phase21/.*"],
+            "matchPackagePatterns": ["@phase21/chains"],
             "matchUpdateTypes": ["patch", "minor"],
             "schedule": ["before 3pm"],
             "groupName": "api3"
