--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "optimize-api-provider-logos": "rimraf ./optimized/api-provider & svgo -q -p 8 -f ./raw/api-providers -o ./optimized/api-provider",
         "build": "yarn optimize-chain-logos && yarn optimize-symbol-logos && yarn optimize-api-provider-logos && node scripts/build.js",
         "build-svg": "yarn optimize-chain-logos && yarn optimize-symbol-logos && yarn optimize-api-provider-logos && node scripts/build-svg.js",
+        "fetch": "node scripts/fetch-missing.js",
         "package": "yarn build-svg && yarn pack --filename logos.tgz",
         "prettier": "prettier --write \"**/*.{js,jsx,json,md}\"",
         "release": "yarn changeset publish"
@@ -17,12 +18,13 @@
         "camelcase": "^6.3.0"
     },
     "devDependencies": {
-        "@phase21/chains": "^0.4.0",
         "@babel/core": "^7.23.7",
         "@babel/preset-react": "^7.23.3",
         "@changesets/changelog-github": "^0.5.0",
         "@changesets/cli": "^2.27.1",
         "@phase21/api-integrations": "^1.1.0",
+        "@phase21/chains": "^0.4.0",
+        "dropbox": "^10.34.0",
         "prettier": "^3.2.4",
         "rimraf": "^5.0.5",
         "svgo": "^3.2.0"
