--- a/.github/workflows/fetch.yml
+++ b/.github/workflows/fetch.yml
@@ -1,7 +1,7 @@
 # This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
 
-name: Deploy to Github Pages
+name: Fetch Logos from Dropbox
 
 on:
   pull_request:
@@ -10,6 +10,9 @@ on:
 jobs:
   pack-local-package:
     runs-on: ubuntu-latest
+    
+    permissions:
+      contents: write
     steps:
       - uses: actions/checkout@v4
       - name: Setup Node
@@ -21,5 +24,9 @@ jobs:
         run: yarn install
       - name: Build Package
         run: yarn build-svg
+      - uses: actions/checkout@v4
+      # Other steps that change files in the repository
       - name: Fetch Logos
         run: yarn fetch --DROPBOX ${{ secrets.DROPBOX }}
+      # Commit all changed files back to the repository
+      - uses: stefanzweifel/git-auto-commit-action@v5
