--- a/package.json
+++ b/package.json
@@ -27,8 +27,7 @@
         "dropbox": "^10.34.0",
         "prettier": "^3.2.4",
         "rimraf": "^5.0.5",
-        "svgo": "^3.2.0",
-        "dotenv": "^16.3.2"
+        "svgo": "^3.2.0"
     },
     "main": "./dist/cjs/index.js",
     "module": "./dist/esm/index.js",
