--- a/.github/workflows/fetch.yml
+++ b/.github/workflows/fetch.yml
@@ -25,5 +25,8 @@ jobs:
       - name: Build Package
         run: yarn build-svg
       - name: Fetch Logos
-        run: yarn fetch --DROPBOX ${{ secrets.DROPBOX }}
+        run: DROPBOX ${{ secrets.DROPBOX }} yarn run fetch
       - uses: stefanzweifel/git-auto-commit-action@v5
+        with:
+          commit_message: Fetch Logos from Dropbox
+          commit_options: '--no-verify --signoff'
