Add environment variable for Dropbox secret and fetch logos from Dropbox

--- a/.github/workflows/deployfe.yml
+++ b/.github/workflows/deployfe.yml
@@ -24,10 +24,20 @@ jobs:
         with:
           node-version: 18.x
           cache: 'yarn'
+      - name: Set Env
+        run: |
+          touch .env
+          echo DROPBOX=${{ secrets.DROPBOX }} >> .env
       - name: Install Packages
         run: yarn install
-      - name: Pack Package
-        run: yarn package
+      - name: Fetch Logos
+        run: yarn fetch
+      - uses: stefanzweifel/git-auto-commit-action@v5
+        with:
+          commit_message: Fetch Logos from Dropbox
+          commit_options: '--no-verify --signoff'
+      - name: Build Package
+        run: yarn build-svg
       - name: Upload Package
         uses: actions/upload-artifact@v4
         with:
