--- a/.github/workflows/deployfe.yml
+++ b/.github/workflows/deployfe.yml
@@ -37,7 +37,7 @@ jobs:
           commit_message: Fetch Logos from Dropbox
           commit_options: '--no-verify --signoff'
       - name: Build Package
-        run: yarn build-svg
+        run: yarn package
       - name: Upload Package
         uses: actions/upload-artifact@v4
         with:
