Add rebaseWhen option to renovate.json

--- a/renovate.json
+++ b/renovate.json
@@ -32,6 +32,7 @@
             "automerge": true
         }
     ],
+    "rebaseWhen": "behind-base-branch",
     "rangeStrategy": "bump",
     "lockFileMaintenance": {
         "enabled": false
