--- a/.github/workflows/deployfe.yml
+++ b/.github/workflows/deployfe.yml
@@ -20,10 +20,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - name: Setup Node
-        uses: actions/setup-node@v4
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v2
         with:
-          node-version: 18.x
+          version: 8.12.1
+      - uses: actions/setup-node@v4
+        with:
+          node-version: "18.x"
+          cache: 'pnpm'
       - name: Set Env
         if : github.ref == 'refs/heads/main' || contains(github.event.pull_request.labels.*.name, 'fetch')
         run: |
