--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,9 +19,14 @@ jobs:
           # This makes Actions fetch all Git history so that Changesets can generate changelogs with the correct commits
           fetch-depth: 0
 
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v2
+        with:
+          version: 8.12.1
       - uses: actions/setup-node@v4
         with:
           node-version: "18.x"
+          cache: 'pnpm'
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
 
